# mcp-observability

./: .env.example  .gitignore  CLAUDE.md  LIBRECHAT_MCP_UI_SETUP.md  LIBRECHAT_READY.md  MCP_UI_DEBUG_GUIDE.md  MCP_UI_DEEP_DIVE.md  MCP_UI_INTEGRATION_COMPLETE.md  MCP_UI_INTEGRATION_SUMMARY.md  Makefile  README.md  READY_TO_RUN.md  TEST_MCP_UI.md  cdk.json  mcp.json  package.json  pyproject.toml  start-librechat-local.sh  start-librechat-mcp.sh  stop-librechat-mcp.sh  test-librechat-mcp.sh  test-mcp-config.cjs  test-mcp-standalone.py  test-mcp-ui-height.html  test-mcp-ui-integration.md  test_mcp_ui_output.py  test_mcp_ui_server.py
.claude/: README.md  mcp.json  settings.json
.claude/agents/: aws-infra-specialist.md  code-reviewer.md  mcp-developer.md  observability-expert.md  test-debugger.md
agentcore-experiment/: .bedrock_agentcore.yaml  Dockerfile  README.md  __init__.py  requirements.txt
agentcore-experiment/common/: __init__.py  observability.py
agentcore-experiment/deployment/: create_gateway.py  deploy_experiment.py
agentcore-experiment/mcps/: __init__.py
agentcore-experiment/mcps/experiment_server/: __init__.py  server.py
agentcore-experiment/tests/: test_agentcore_simple.py  test_deployed_agentcore.py  test_deployed_server.py  test_direct_http.py  test_gateway_client.py  test_invoke_runtime.py  test_invoke_with_sigv4.py  test_local_server.py  test_mcp_with_jwt.py  test_mcp_working.py  test_sdk_invoke.py  test_simple.py
agentcore-experiment/tools/: __init__.py  data_generator.py  fibonacci.py  health_check.py  text_analyzer.py  weather.py
clients/: langfuse_smoke_test.py  langfuse_test.py  mcp_client.py  send_test_traces.py  test_distributed_trace.py  test_langfuse_simple.py  test_langfuse_trace.py  test_mcp_ui_server.py
infra-cdk/: LIBRECHAT_README.md  README.md  app.py  cdk.json  cloudfront_addon.py  enable-bedrock.sh  langfuse_stack.py  librechat-minimal.yaml  librechat.yaml  requirements.txt  ssm_ch_diag.json  ssm_ch_diag_simple.json  ssm_ch_fix.json  ssm_ch_fix2.json  ssm_ch_fix3.json  ssm_ch_fix4.json
infra-cdk/cdk.out.v3/: LangfuseStack.assets.json  LangfuseStack.template.json  manifest.json  tree.json
infra-cdk/configs/librechat/: librechat-config.yaml
infra-cdk/docs/: AGENTCORE_DEPLOYMENT.md  CDK_README.md  CLICKHOUSE_SCHEMA.md  CLICKHOUSE_SETUP.md  LANGFUSE_DEPLOYMENT.md  LIBRECHAT_DEPLOYMENT.md
infra-cdk/scripts/: create_clickhouse_schema.sql  deploy_agentcore.sh  langfuse_official_clickhouse_schema.sql  setup_clickhouse_complete.sh
infra-cdk/scripts/database/: create_clickhouse_schema.sql  langfuse_clickhouse_schema.sql
infra-cdk/scripts/setup/: provision_clickhouse_ec2.sh  setup-librechat-secrets.sh  setup_clickhouse_complete.sh  test_librechat.sh
infra-cdk/stacks/: __init__.py  agentcore_mcp_stack.py  langfuse_stack.py  librechat_stack.py
librechat-source/: package-lock.json  package.json
librechat-source/client/: package.json  test-mcp-ui.html
librechat-source/client/src/Providers/: MCPResourceContext.tsx  index.ts
librechat-source/client/src/common/: artifacts.ts
librechat-source/client/src/components/Artifacts/: ArtifactTabs.tsx  MCPUIArtifact.tsx  MCPUIRenderer.tsx
librechat-source/client/src/utils/: mcpUIDetector.ts  mcpUIParser.ts
mcp-chat-ui/: .dockerignore  Dockerfile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  test-chat.html
mcp-chat-ui/app/api/chat/: route.ts
mcp-chat-ui/app/api/mcp/: route.ts
mcp-chat-ui/components/chat/: chat-interface.tsx  input-form.tsx  message-list.tsx
mcp-chat-ui/components/mcp/: server-config.tsx  ui-resource-renderer.tsx
mcp-chat-ui/components/ui/: button.tsx  input.tsx  select.tsx  switch.tsx
mcp-chat-ui/lib/mcp/: client.ts  handler.ts  types.ts
mcp-ui-chat/: package-lock.json  package.json  server.js
mcp-ui-chat/src/: App.css  App.jsx  index.css
mcp-ui-chat/src/components/: ChatInterface.css  ChatInterface.jsx  MCPServerManager.css  MCPServerManager.jsx  ModelSelector.css  ModelSelector.jsx
mcp/feedback_server/: __init__.py  feedback_tools.py  main.py
mcp/tools_server/: lambda_handler.py
mcp_local/common/: config.py
mcp_local/feedback_server/: feedback_tools.py  lambda_handler.py  main.py
mcp_local/tools_server/: main.py
mcp_local/ui_server/: __init__.py  main.py  mcp_ui_server_fixed.py  mcp_ui_server_refactored.py  tool_registry.py
mcp_local/ui_server/tools/: README.md  __init__.py  utils.py
mcp_local/ui_server/tools/base64_image/: template.html  tool.py
mcp_local/ui_server/tools/canvas_drawing/: template.html  tool.py
mcp_local/ui_server/tools/code_editor/: template.html  tool.py
mcp_local/ui_server/tools/cytoscape_network/: template.html  tool.py
mcp_local/ui_server/tools/dashboard/: template.html  tool.py
mcp_local/ui_server/tools/data_table/: __init__.py  template.html  tool.py
mcp_local/ui_server/tools/file_viewer/: template.html  tool.py
mcp_local/ui_server/tools/form_builder/: __init__.py  template.html  tool.py
mcp_local/ui_server/tools/generate_custom_ui/: template.html  tool.py
mcp_local/ui_server/tools/interactive_chart/: __init__.py  template.html  tool.py
mcp_local/ui_server/tools/markdown_viewer/: template.html  tool.py
mcp_local/ui_server/tools/react_interactive/: template.html  tool.py
mcp_local/ui_server/tools/realtime_data/: template.html  tool.py
mcp_local/ui_server/tools/recharts_dashboard/: template.html  tool.py
mcp_local/ui_server/tools/remote_dom/: template.html  tool.py
mcp_local/ui_server/tools/simple_ui/: __init__.py  template.html  tool.py
mcp_observability_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
plans/: generative-custom-ui-implementation.md  librechat-artifacts-mcp-integration.md  mcp-chat-ui-architecture.md
server/: __init__.py
server/common/: __init__.py  mcp_obs_middleware.py  trace_index.py
server/feedback_server/: app.py  main.py
server/tools_server/: __init__.py  app.py  main.py  tools.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  vite-env.d.ts
(+10 files in other folders)
