[project]
name = "mcp-observability-demo"
version = "0.1.0"
description = "MCP observability demo: separate FastMCP tools and feedback servers with Langfuse tracing"
readme = "README.md"
authors = [ { name = "Windsurf Demo" } ]
requires-python = ">=3.10"

# Core runtime dependencies
dependencies = [
  "fastapi>=0.111",
  "starlette>=0.37",
  "uvicorn[standard]>=0.30",
  "fastmcp>=2.10",
  "langfuse>=2.0.0",
  "redis>=5.0",
  # Simple local client for testing MCP HTTP servers
  "mcp>=1.1.0",
  # AWS Lambda and observability
  "boto3>=1.34.0",
  "aws-lambda-powertools[all]>=2.30.0",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-instrumentation>=0.41b0",
  "opentelemetry-instrumentation-fastapi>=0.41b0",
  "opentelemetry-exporter-otlp>=1.20.0",
]

[project.optional-dependencies]
# AWS CDK for infrastructure deployment
cdk = [
  "aws-cdk-lib==2.152.0",
  "constructs==10.3.0",
  "aws-cdk.aws-lambda-python-alpha==2.152.0a0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_local", "mcp_local.ui_server"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[project.scripts]
# MCP UI Server
ui-server = "mcp_local.ui_server.mcp_ui_compliant:main"

# Note: Custom scripts have been removed from pyproject.toml
# uv doesn't support [tool.uv.scripts] configuration
# Run commands directly as documented in CLAUDE.md

